--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     	<meta name="HandheldFriendly" content="true">        
         <meta name="description" content="papelería e internet Alondra cerca de ti y de tus necesidades en villa las palmas">
         <meta name="keywords" content="papeleria, internet, impresiones, menudeo, villa, palmas, aguascalientes, copias, enmicados, engargolados, monografias, biografias">	
-		<link rel="shortcut icon" href="imagenes/Alondra32x32.ico"> 
+		<link rel="shortcut icon" href="imagenes/Alondra32x32.ico">
+	<link rel="stylesheet" type="text/css" href="demo.css" />		
         <link rel="stylesheet" type="text/css" href="sec/enhanced.css" media="screen, handheld" />        
         <link rel="stylesheet" type="text/css" href="style.css" media="screen  and (min-width: 40.5em)" />
         <!--[if (lt IE 9)&(!IEMobile)]>
     	<link rel="stylesheet" type="text/css" href="../style.css" />
     	<![endif]-->    
-		<script type="text/javascript" src="js/modernizr.custom.53451.js"></script>
+	<script type="text/javascript" src="js/modernizr.custom.53451.js"></script>
         <style type="text/css">
             #trtitle{
                 background: rgba(168, 167, 250, 1);
@@ -128,7 +129,7 @@
 		</div>
 		<!-- /Home -->
                     
-        <!-- Para cargar la página de la mejor manera, se debe cargar el Javascript de manera asincrona. De esta forma se habilita al navegador a cargar la página y el Javascript en paraelo. Para el mejor funcionamiento, coloque el Javascript justo antes de la sección BODY. Estos es para que cuando haya terminado todas las tareas dentro del html, pero aun dentro del cuerpo del documento, entonces comience la ejecución de los scripts -->
+        <!-- Para cargar la página de la mejor manera, se debe cargar el Javascript de manera asincrona. De esta forma se habilita al navegador a cargar la página y el Javascript en paraelo. Para el mejor funcionamiento, coloque el Javascript justo antes de llegar al termino de la sección BODY. Estos es para que cuando haya terminado todas las tareas dentro del html, pero aun dentro del cuerpo del documento, entonces comience la ejecución de los scripts -->
         <script type="text/javascript">
           (function() {
             var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
@@ -139,15 +140,13 @@
         <!-- Se puede utilizar la llamada en el evento onload cuando se usa la carga asincrona para comenzar la ejecución del Javascript despues que todas las dependencias se hayan cargado -->
         <!-- https://developers.google.com/+/web/embedded-post/ -->
         <script type="text/javascript">
-        <!--
-        /** Despliega las entradas desde el Alimentador JSON especificado, creando un nuevo 
-		 *  elemento 'dl' en el DOM. Cada 'dt' es el titulo del renglon, y cada dd' es el contenido del renglon
-		 */
+        <!-- 
+        /** Despliega las entradas desde el Alimentador JSON especificado, creando un nuevo elemento 'dl' en el DOM. Cada 'dt' es el titulo del renglon, y cada dd' es el contenido del renglon */
             function listEntries(json) {
             var div = document.getElementById('data');
             var currentTime = new Date();
-            var dia_hoy = currentTime.getDate();
-            var mes_hoy = currentTime.getMonth();
+            var dia = currentTime.getDate();
+            var mes = currentTime.getMonth();
             var posic = 0;
             var incluidos = 0;
     
@@ -161,9 +160,11 @@
                     var posmes = efemeride.indexOf("mes:");
                     var posdia = efemeride.indexOf("dia:");
                     var posnum = efemeride.indexOf("num:");               
-                    var mes_entrada = efemeride.substr(posmes+5, posdia-posmes-7);
-                    var dia_entrada = efemeride.substr(posdia+5, posnum-posdia-7);
-                    if (mes_entrada==mes_hoy && dia_entrada==dia_hoy) {
+                    var posefe = efemeride.indexOf("efemeride:");
+                    var mesEntrada = efemeride.substr(posmes+5, posdia-posmes-7);
+                    var diaEntrada = efemeride.substr(posdia+5, posnum-posdia-7);
+                    var numEntrada = efemeride.substr(posnum+5, posefe-posnum-7);
+                    if (mesEntrada==mes && diaEntrada==dia) {
                         incluidos++;
                         var posyear = efemeride.indexOf("year:");
                         var posefe = efemeride.indexOf("efemeride:");
@@ -178,17 +179,19 @@
                         posic++;
                         var pres = document.createElement('p');
                         pres.appendChild(document.createTextNode(anio.concat(efem)));
-    					var a = document.createElement("a");
-    					var text = document.createTextNode("Ver más");
-    					a.setAttribute("style", "text-decoration: underline;");
-    					a.setAttribute("href", "ver_mas.html");
-    					a.appendChild(text);
-    					pres.appendChild(a);						
+    			var a = document.createElement("a");
+    			var text1 = document.createTextNode("Conozca más");
+    			var text2 = "ver_mas.html?numid=".concat(numEntrada);
+    			a.setAttribute("style", "text-decoration: underline;");
+    			a.setAttribute("href", text2);
+    			a.appendChild(text1);
+    			pres.appendChild(a);						
                         div.appendChild(pres);
                     }
                 }
             }
-           function handleQueryResponse(response) {
+            /** Función que obtiene la información de los artículos destacados, a fin de montarla dentro del navegador de artículos destacados */
+            function handleQueryResponse(response) {
                 if (response.isError()) {
                     alert('Error in query: ' + response.getMessage() + ' ' + response.getDetailedMessage());                        
                     return;
