Más Servicios  y cambio de precios
Se incluyo una categoría más de un servicio y también se modifico la
base de datos de los precios de los servicios. Aun falta corregir el ID
de los precios, por grupo de servicio.

--- a/sec/servicios.html
+++ b/sec/servicios.html
@@ -100,17 +100,21 @@
                             <td id="TDLeyendas" colspan="4">E n m i c a d o</td>
                         </tr>
                         <tr>
-                            <td rowspan="4"></td>                        
-                            <td id="Imagen" rowspan="4"><IMG SRC="../imagenes/enmicado.png" ALT="Enmicado tamaño credencial hasta tamaño oficio"></td>
-                            <td id="opcionA">1/4 de hoja tamaño carta</td>                
+                            <td rowspan="5"></td>                        
+                            <td id="Imagen" rowspan="5"><IMG SRC="../imagenes/enmicado.png" ALT="Enmicado tamaño credencial hasta tamaño oficio"></td>
+                            <td id="opcionA">1/8 de hoja tamaño oficio</td>                
                             <td id="Precio3" style="color: #8844FF;"></td>
                         </tr>
                         <tr>
-                            <td id="opcionA">1/2 hoja tamaño carta</td>
+                            <td id="opcionA">1/4 hoja tamaño oficio</td>
                             <td id="Precio4" style="color: #8844FF;"></td>               
+                        </tr>						
+                        <tr>
+                            <td id="opcionA">1/2 hoja tamaño oficio</td>
+                            <td id="Precio19" style="color: #8844FF;"></td>               
                         </tr>
                         <tr>
-                            <td id="opcionA">1 hoja tamaño carta</td>
+                            <td id="opcionA">3/4 hoja tamaño carta</td>
                             <td id="Precio5" style="color: #8844FF;"></td>               
                         </tr>
                         <tr>
