incluir imágenes del carrusel
se incluyo las imágenes necesarias para el carrusel

--- a/test.html
+++ b/test.html
@@ -69,6 +69,18 @@
 			<section id="dg-container" class="dg-container">
 				<div id="destacados" class="dg-wrapper">
 <a href="#"><table><tr><td><img src="imagenes\0.jpg" id="im1"></td><td id="pr1"></td></tr><tr><td colspan="2" id="de1"></td></tr></table></a>
+<a href="#"><table><tr><td><img src="imagenes\0.jpg" id="im2"></td><td id="pr2"></td></tr><tr><td colspan="2" id="de2"></td></tr></table></a>
+<a href="#"><table><tr><td><img src="imagenes\0.jpg" id="im3"></td><td id="pr3"></td></tr><tr><td colspan="2" id="de3"></td></tr></table></a>
+<a href="#"><table><tr><td><img src="imagenes\0.jpg" id="im4"></td><td id="pr4"></td></tr><tr><td colspan="2" id="de4"></td></tr></table></a>
+<a href="#"><table><tr><td><img src="0" id="im5"></td><td id="pr5"></td></tr><tr><td colspan="2" id="de5"></td></tr></table></a>
+<a href="#"><table><tr><td><img src="0" id="im6"></td><td id="pr6"></td></tr><tr><td colspan="2" id="de6"></td></tr></table></a>
+<a href="#"><table><tr><td><img src="0" id="im7"></td><td id="pr7"></td></tr><tr><td colspan="2" id="de7"></td></tr></table></a>
+<a href="#"><table><tr><td><img src="0" id="im8"></td><td id="pr8"></td></tr><tr><td colspan="2" id="de8"></td></tr></table></a>
+<a href="#"><table><tr><td><img src="0" id="im9"></td><td id="pr9"></td></tr><tr><td colspan="2" id="de9"></td></tr></table></a>
+<a href="#"><table><tr><td><img src="0" id="im10"></td><td id="pr10"></td></tr><tr><td colspan="2" id="de10"></td></tr></table></a>
+<a href="#"><table><tr><td><img src="0" id="im11"></td><td id="pr11"></td></tr><tr><td colspan="2" id="de11"></td></tr></table></a>
+<a href="#"><table><tr><td><img src="0" id="im12"></td><td id="pr12"></td></tr><tr><td colspan="2" id="de12"></td></tr></table></a>
+<a href="#"><table><tr><td><img src="imagenes\0.jpg" id="im13"></td><td id="pr13"></td></tr><tr><td colspan="2" id="de13"></td></tr></table></a>
 <a href="#"><table><tr><td><img src="imagenes\0.jpg" id="im14"></td><td id="pr14"></td></tr><tr><td colspan="2" id="de14"></td></tr></table></a>
 				</div>
                 <nav>
