--- a/sec/objetos.html
+++ b/sec/objetos.html
@@ -20,9 +20,9 @@
     </head>
     <body>
 		<h1>Papeleria ALONDRA!</h1>
-		<table><tr>
+		<table border="1"><tr>
 		<td>
-		<amp-img src="https://www.ampproject.org/examples/images/amp.jpg" width="900" height="508" layout="responsive"></amp-img>
+		<amp-img src="../imagenes/objetos/alameda1.jpg" width="613" height="375" layout="responsive"></amp-img>
 		</td>
 		</tr></table>
     </body>
