--- a/sec/objetos.html
+++ b/sec/objetos.html
@@ -24,6 +24,10 @@
 		<td>
 		<amp-img src="../imagenes/objetos/alameda1.jpg" width="613" height="375" layout="responsive"></amp-img>
 		</td>
+		<td>
+		<img src="../imagenes/objetos/alameda1.jpg">
+		</td>			
 		</tr></table>
+	    <h1>Papeleria ALONDRA!</h1>
     </body>
 </html>
