--- a/sec/objetos.html
+++ b/sec/objetos.html
@@ -25,9 +25,9 @@
 		<amp-img src="../imagenes/objetos/alameda1.jpg" width="613" height="375" layout="responsive"></amp-img>
 		</td>
 		<td>
-		<img src="../imagenes/objetos/alameda1.jpg">
+		<img src="../imagenes/objetos/ALAMEDA1.jpg">
 		</td>			
 		</tr></table>
-	    <h1>Papeleria ALONDRA!</h1>
+	    <h1>Papeleria ALONDRA 2!</h1>
     </body>
 </html>
