imagen de la alameda actual
imagen 2017 de la alameda de aguascalientes

--- a/sec/objetos.html
+++ b/sec/objetos.html
@@ -22,12 +22,15 @@
 		<h1>Papeleria ALONDRA!</h1>
 		<table border="1"><tr>
 		<td>
-		<amp-img src="../imagenes/objetos/ALAMEDA1.jpg" width="613" height="375" layout="responsive"></amp-img>
+		<amp-img src="https://papeleria-alondra.github.io/imagenes/objetos/ALAMEDA1.jpg" width="613" height="375" layout="responsive"></amp-img>
 		</td>
 		<td>
 		<img src="../imagenes/objetos/ALAMEDA1.jpg">
+		</td>
+		<td>
+		<img src="../imagenes/objetos/ALAMEDA1B.jpg">
 		</td>			
 		</tr></table>
-	    <h1>Papeleria ALONDRA 2!</h1>
+	    <h1>Papeleria ALONDRA 3!</h1>
     </body>
 </html>
