--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     		<!-- Cabecera con Navegacion -->
             <!-- Papeleria ALONDRA en google+ -->		
             <div id="googleplus">
-                <a href="https://plus.google.com/103100592601771136938" rel="publisher" target="_blank"><IMG SRC="imagenes/googleplus.png" ALT="papelería ALONDRA en google+"></a>
+                <a href="whatsapp://send?text=Hola!&phone=524492458555" rel="publisher" target="_blank"><IMG SRC="imagenes/whatsapp.png" ALT="papelería ALONDRA en WhatsApp"></a>
             </div>
     		<!-- /Papeleria ALONDRA en google+ -->            
             <!-- Papeleria ALONDRA en facebook -->		
