--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     		<!-- Cabecera con Navegacion -->
             <!-- Papeleria ALONDRA en google+ -->		
             <div id="googleplus">
-                <a href="whatsapp://send?text=Hola!&phone=524492458555" rel="publisher" target="_blank"><IMG SRC="imagenes/whatsapp.png" ALT="papelería ALONDRA en WhatsApp"></a>
+                <a href="https://wa.me/524492458555" rel="publisher" target="_blank"><IMG SRC="imagenes/whatsapp.png" ALT="papelería ALONDRA en WhatsApp"></a>
             </div>
     		<!-- /Papeleria ALONDRA en google+ -->            
             <!-- Papeleria ALONDRA en facebook -->		
